feat(ducklake): exercise the full DuckLake lifecycle and remove POC shortcuts
- Add DuckLakeService + model classes covering ACID commits (one snapshot per
  transaction), rollback, time travel by version and timestamp, the change
  feed, schema and partition evolution, data inlining/flush, compaction,
  snapshot expiry and file cleanup.
- DuckLake data files now live on LocalStack S3 in tests (PostgreSQL catalog);
  the default application.yml runs with a local DuckDB-file catalog and no infra.
- DuckDBService: one DuckDB instance with per-call duplicate connections, an S3
  secret from ducklake.* properties, and an inTransaction helper. Startup no
  longer seeds a hardcoded table or swallows attach failures; the S3/DuckLake/
  temp-dir fallback chain in createTableFromS3 is gone.
- PartitionedParquetService: single read_parquet(hive_partitioning) query path.
- Add DuckLakeController (/api/ducklake); validate identifiers in DuckDBController.
- Tests no longer catch and ignore failures; S3 paths are asserted for real.
  Replace DucklakePostgresTest with DuckLakeLifecycleIntegrationTest.
- Replace hadoop-client with hadoop-common; drop DuckLakeJavaExample.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>