@@ -2,17 +2,14 @@ package com.rixon.learn.spring.data.ducklake.service;
 
 import com.rixon.learn.spring.data.ducklake.TestcontainersConfiguration;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
-import org.testcontainers.containers.localstack.LocalStackContainer;
 import org.testcontainers.junit.jupiter.EnabledIfDockerAvailable;
 import software.amazon.awssdk.core.sync.RequestBody;
 import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.CreateBucketRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.io.IOException;
@@ -22,12 +19,21 @@ import java.sql.SQLException;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static com.rixon.learn.spring.data.ducklake.TestcontainersConfiguration.DATA_BUCKET;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+/**
+ * Reads CSV from local disk and from LocalStack S3 through DuckDB's httpfs extension, using the
+ * S3 secret {@link DuckDBService} creates from {@code ducklake.s3.*}.
+ */
 @SpringBootTest
 @Import(TestcontainersConfiguration.class)
 @EnabledIfDockerAvailable
 class DuckDBServiceIntegrationTest {
+
+    private static final String CSV = "id,name,value\n1,Item 1,100\n2,Item 2,200\n3,Item 3,300";
+    private static final String TEST_TABLE = "test_table";
 
     @Autowired
     private DuckDBService duckDBService;
@@ -35,112 +41,61 @@ class DuckDBServiceIntegrationTest {
     @Autowired
     private S3Client s3Client;
 
-    @Autowired
-    private LocalStackContainer localStackContainer;
-
     @TempDir
     Path tempDir;
 
-    private static final String TEST_BUCKET = "test-bucket";
-    private static final String TEST_CSV_KEY = "test-data.csv";
-    private static final String TEST_TABLE = "test_table";
-    private Path testCsvPath;
-
-    @BeforeEach
-    void setUp() throws IOException {
-        // Create test bucket
-        s3Client.createBucket(CreateBucketRequest.builder()
-                .bucket(TEST_BUCKET)
-                .build());
-
-        // Create test CSV data
-        String csvData = "id,name,value\n1,Item 1,100\n2,Item 2,200\n3,Item 3,300";
-
-        // Save to local file
-        testCsvPath = tempDir.resolve("test-data.csv");
-        Files.writeString(testCsvPath, csvData);
-
-        // Upload to S3
-        s3Client.putObject(PutObjectRequest.builder()
-                .bucket(TEST_BUCKET)
-                .key(TEST_CSV_KEY)
-                .build(), RequestBody.fromString(csvData));
-
-        System.out.println("[DEBUG_LOG] Test bucket created and CSV file uploaded");
-        System.out.println("[DEBUG_LOG] Local CSV file created at: " + testCsvPath);
-    }
-
     @AfterEach
-    void tearDown() {
-        try {
-            // Clean up test table if it exists
-            duckDBService.executeQuery("DROP TABLE IF EXISTS " + TEST_TABLE);
-        } catch (SQLException e) {
-            System.err.println("Error cleaning up test table: " + e.getMessage());
-        }
+    void tearDown() throws SQLException {
+        duckDBService.executeStatement("DROP TABLE IF EXISTS " + TEST_TABLE);
     }
 
     @Test
-    void testCreateTableAndQuery() throws SQLException {
-        try {
-            // First try with S3 and DuckLake
-            testCreateTableFromS3();
-        } catch (SQLException e) {
-            System.out.println("[DEBUG_LOG] S3 test failed, falling back to local CSV: " + e.getMessage());
-            // Fall back to local CSV file
-            testCreateTableFromLocalCSV();
-        }
-    }
+    void testCreateTableFromS3Csv() throws SQLException {
+        s3Client.putObject(PutObjectRequest.builder().bucket(DATA_BUCKET).key("service/test-data.csv").build(),
+                RequestBody.fromString(CSV));
 
-    private void testCreateTableFromS3() throws SQLException {
-        // Get the S3 endpoint URL from LocalStack
-        String s3Endpoint = localStackContainer.getEndpointOverride(LocalStackContainer.Service.S3).toString();
-        System.out.println("[DEBUG_LOG] S3 endpoint: " + s3Endpoint);
+        duckDBService.createTableFromFile(TEST_TABLE, "s3://" + DATA_BUCKET + "/service/test-data.csv", "CSV");
 
-        // Set AWS credentials for DuckLake to access S3
-        duckDBService.executeQuery("SET s3_region='" + localStackContainer.getRegion() + "'");
-        duckDBService.executeQuery("SET s3_access_key_id='" + localStackContainer.getAccessKey() + "'");
-        duckDBService.executeQuery("SET s3_secret_access_key='" + localStackContainer.getSecretKey() + "'");
-        duckDBService.executeQuery("SET s3_endpoint='" + s3Endpoint + "'");
-        duckDBService.executeQuery("SET s3_url_style='path'");
-
-        // Construct S3 path
-        String s3Path = "s3://" + TEST_BUCKET + "/" + TEST_CSV_KEY;
-        System.out.println("[DEBUG_LOG] S3 path: " + s3Path);
-
-        // Create table from S3 data
-        duckDBService.createTableFromS3(TEST_TABLE, s3Path, "CSV");
-
-        // Verify the table
         verifyTableData();
     }
 
-    private void testCreateTableFromLocalCSV() throws SQLException {
-        // Create table from local CSV file
-        duckDBService.createTableFromCSV(TEST_TABLE, testCsvPath.toString());
+    @Test
+    void testCreateTableFromLocalCsv() throws SQLException, IOException {
+        Path csv = Files.writeString(tempDir.resolve("test-data.csv"), CSV);
 
-        // Verify the table
+        duckDBService.createTableFromCSV(TEST_TABLE, csv.toString());
+
         verifyTableData();
+    }
+
+    @Test
+    void testMissingS3ObjectFails() {
+        assertThatThrownBy(() -> duckDBService.createTableFromFile(TEST_TABLE, "s3://" + DATA_BUCKET + "/missing.csv", "CSV"))
+                .isInstanceOf(SQLException.class);
+    }
+
+    @Test
+    void testInTransactionRollsBackOnFailure() throws SQLException {
+        duckDBService.executeStatement("CREATE TABLE " + TEST_TABLE + " (id INTEGER)");
+
+        assertThatThrownBy(() -> duckDBService.inTransaction(conn -> {
+            conn.createStatement().execute("INSERT INTO " + TEST_TABLE + " VALUES (1)");
+            conn.createStatement().execute("INSERT INTO " + TEST_TABLE + " VALUES ('not a number')");
+            return null;
+        })).isInstanceOf(SQLException.class);
+
+        assertThat(duckDBService.executeQuery("SELECT count(*) AS count FROM " + TEST_TABLE).getFirst().get("count"))
+                .isEqualTo(0L);
     }
 
     private void verifyTableData() throws SQLException {
-        // Query the table
-        List<Map<String, Object>> results = duckDBService.executeQuery("SELECT * FROM " + TEST_TABLE);
+        List<Map<String, Object>> results = duckDBService.executeQuery("SELECT * FROM " + TEST_TABLE + " ORDER BY id");
 
-        // Verify results
-        assertNotNull(results);
-        assertEquals(3, results.size());
-
-        // Verify first row
-        Map<String, Object> firstRow = results.get(0);
-        // Use toString() to compare values to handle different numeric types (Integer vs Long)
-        assertEquals("1", firstRow.get("id").toString());
-        assertEquals("Item 1", firstRow.get("name"));
-        assertEquals("100", firstRow.get("value").toString());
-
-        // Test count query
-        List<Map<String, Object>> countResult = duckDBService.executeQuery("SELECT COUNT(*) as count FROM " + TEST_TABLE);
-        assertEquals(1, countResult.size());
-        assertEquals(3L, countResult.get(0).get("count"));
+        assertThat(results).hasSize(3);
+        assertThat(results.getFirst()).containsEntry("name", "Item 1");
+        assertThat(results.getFirst().get("id").toString()).isEqualTo("1");
+        assertThat(results.getFirst().get("value").toString()).isEqualTo("100");
+        assertThat(duckDBService.executeQuery("SELECT COUNT(*) AS count FROM " + TEST_TABLE).getFirst().get("count"))
+                .isEqualTo(3L);
     }
 }
