@@ -2,32 +2,47 @@ package com.rixon.learn.spring.data.ducklake.service;
 
 import com.rixon.learn.spring.data.ducklake.TestcontainersConfiguration;
 import org.apache.avro.Schema;
+import org.apache.avro.generic.GenericData;
 import org.apache.avro.generic.GenericRecord;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
-import org.testcontainers.containers.localstack.LocalStackContainer;
 import org.testcontainers.junit.jupiter.EnabledIfDockerAvailable;
-import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.CreateBucketRequest;
 
 import java.io.IOException;
 import java.nio.file.Path;
 import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static com.rixon.learn.spring.data.ducklake.TestcontainersConfiguration.DATA_BUCKET;
+import static org.assertj.core.api.Assertions.assertThat;
 
+/**
+ * Writes Hive-partitioned Parquet from Avro records, uploads it to LocalStack S3, and queries it
+ * with DuckDB from both local disk and S3, checking that partition filters prune directories.
+ */
 @SpringBootTest
 @Import(TestcontainersConfiguration.class)
 @EnabledIfDockerAvailable
 class PartitionedParquetServiceTest {
+
+    private static final String PRODUCT_SCHEMA = """
+            {
+              "type": "record",
+              "name": "Product",
+              "fields": [
+                {"name": "id", "type": "int"},
+                {"name": "name", "type": "string"},
+                {"name": "category", "type": "string"},
+                {"name": "department", "type": "string"},
+                {"name": "price", "type": "double"}
+              ]
+            }""";
+    private static final String VIEW = "partitioned_test_view";
 
     @Autowired
     private PartitionedParquetService partitionedParquetService;
@@ -35,268 +50,83 @@ class PartitionedParquetServiceTest {
     @Autowired
     private DuckDBService duckDBService;
 
-    @Autowired
-    private S3Client s3Client;
-
-    @Autowired
-    private LocalStackContainer localStackContainer;
-
     @TempDir
     Path tempDir;
 
-    private static final String TEST_BUCKET = "parquet-test-bucket";
-    private static final String TEST_PREFIX = "partitioned-data";
-    private static final String TEST_TABLE = "partitioned_test_table";
-
-    @BeforeEach
-    void setUp() {
-        // Create test bucket
-        s3Client.createBucket(CreateBucketRequest.builder()
-                .bucket(TEST_BUCKET)
-                .build());
-
-        System.out.println("[DEBUG_LOG] Test bucket created: " + TEST_BUCKET);
-
-        // Configure DuckDB to access S3 via LocalStack
-        try {
-            String s3Endpoint = localStackContainer.getEndpointOverride(LocalStackContainer.Service.S3).toString();
-            System.out.println("[DEBUG_LOG] S3 endpoint: " + s3Endpoint);
-
-            duckDBService.executeStatement("SET s3_region='" + localStackContainer.getRegion() + "'");
-            duckDBService.executeStatement("SET s3_access_key_id='" + localStackContainer.getAccessKey() + "'");
-            duckDBService.executeStatement("SET s3_secret_access_key='" + localStackContainer.getSecretKey() + "'");
-            duckDBService.executeStatement("SET s3_endpoint='" + s3Endpoint + "'");
-            duckDBService.executeStatement("SET s3_url_style='path'");
-        } catch (SQLException e) {
-            System.err.println("Error configuring DuckDB for S3: " + e.getMessage());
-            throw new RuntimeException("Failed to configure DuckDB for S3", e);
-        }
-    }
-
     @AfterEach
-    void tearDown() {
-        try {
-            // Clean up test table if it exists
-            duckDBService.executeStatement("DROP VIEW IF EXISTS " + TEST_TABLE);
-        } catch (SQLException e) {
-            System.err.println("Error cleaning up test table: " + e.getMessage());
-        }
+    void tearDown() throws SQLException {
+        duckDBService.executeStatement("DROP VIEW IF EXISTS " + VIEW);
     }
 
     @Test
-    void testCreateAndQueryPartitionedParquetFiles() throws IOException, SQLException {
-        // Create Avro schema
-        String schemaJson = "{\n" +
-                "  \"type\": \"record\",\n" +
-                "  \"name\": \"Customer\",\n" +
-                "  \"fields\": [\n" +
-                "    {\"name\": \"id\", \"type\": \"int\"},\n" +
-                "    {\"name\": \"name\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"email\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"region\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"status\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"signup_date\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"balance\", \"type\": \"double\"}\n" +
-                "  ]\n" +
-                "}";
+    void testRandomRecordsPartitionedLocallyAndOnS3() throws IOException, SQLException {
+        Schema schema = partitionedParquetService.createSchema("""
+                {
+                  "type": "record",
+                  "name": "Customer",
+                  "fields": [
+                    {"name": "id", "type": "int"},
+                    {"name": "region", "type": "string"},
+                    {"name": "status", "type": "string"},
+                    {"name": "balance", "type": "double"}
+                  ]
+                }""");
+        String outputDir = tempDir.resolve("customers").toString();
 
-        Schema schema = partitionedParquetService.createSchema(schemaJson);
-        System.out.println("[DEBUG_LOG] Created schema: " + schema.getName());
-
-        // Define partition columns
-        List<String> partitionColumns = Arrays.asList("region", "status");
-
-        // Create partitioned Parquet files
-        String outputDir = tempDir.resolve("parquet-data").toString();
+        // The default generator gives every record distinct values: 20 records -> 20 partitions
         Map<String, List<String>> partitionFiles = partitionedParquetService.createPartitionedParquetFiles(
-                schema,
-                partitionColumns,
-                100, // 100 records
-                outputDir,
-                null // Use default random data generator
-        );
+                schema, List.of("region", "status"), 20, outputDir, null);
+        assertThat(partitionFiles).hasSize(20).containsKey("region=region_0/status=status_0/");
 
-        System.out.println("[DEBUG_LOG] Created partitioned Parquet files in: " + outputDir);
-        System.out.println("[DEBUG_LOG] Partitions: " + partitionFiles.keySet());
+        String groupBy = "SELECT region, status, COUNT(*) AS count FROM " + VIEW + " GROUP BY region, status";
+        assertThat(partitionedParquetService.queryPartitionedParquetFiles(VIEW, outputDir, groupBy)).hasSize(20);
 
-        // Test local query first
-        try {
-            List<Map<String, Object>> localResults = partitionedParquetService.queryLocalPartitionedParquetFiles(
-                    TEST_TABLE,
-                    outputDir,
-                    partitionColumns,
-                    "SELECT region, status, COUNT(*) as count FROM " + TEST_TABLE + " GROUP BY region, status"
-            );
+        Map<String, List<String>> s3Keys = partitionedParquetService.uploadPartitionedFilesToS3(
+                partitionFiles, DATA_BUCKET, "customers");
+        assertThat(s3Keys.values().stream().mapToInt(List::size).sum()).isEqualTo(20);
 
-            System.out.println("[DEBUG_LOG] Local query results: " + localResults);
-            assertFalse(localResults.isEmpty(), "Query results should not be empty");
+        String s3Path = "s3://" + DATA_BUCKET + "/customers";
+        assertThat(partitionedParquetService.queryPartitionedParquetFiles(VIEW, s3Path, groupBy)).hasSize(20);
 
-            // Verify that we have results for different partitions
-            assertTrue(localResults.size() > 1, "Should have multiple partitions");
-        } catch (SQLException e) {
-            System.err.println("[DEBUG_LOG] Error querying local files: " + e.getMessage());
-            e.printStackTrace();
-        }
-
-        // Test S3 functionality if possible, but don't fail the test if S3 doesn't work
-        try {
-            // Upload to S3
-            Map<String, List<String>> s3Keys = partitionedParquetService.uploadPartitionedFilesToS3(
-                    partitionFiles,
-                    TEST_BUCKET,
-                    TEST_PREFIX
-            );
-
-            System.out.println("[DEBUG_LOG] Uploaded files to S3: " + s3Keys);
-
-            // Query from S3
-            String s3Path = "s3://" + TEST_BUCKET + "/" + TEST_PREFIX;
-            System.out.println("[DEBUG_LOG] S3 path for query: " + s3Path);
-
-            // Configure DuckDB for S3 access again to ensure settings are applied
-            String s3Endpoint = localStackContainer.getEndpointOverride(LocalStackContainer.Service.S3).toString();
-            duckDBService.executeStatement("SET s3_region='" + localStackContainer.getRegion() + "'");
-            duckDBService.executeStatement("SET s3_access_key_id='" + localStackContainer.getAccessKey() + "'");
-            duckDBService.executeStatement("SET s3_secret_access_key='" + localStackContainer.getSecretKey() + "'");
-            duckDBService.executeStatement("SET s3_endpoint='" + s3Endpoint + "'");
-            duckDBService.executeStatement("SET s3_url_style='path'");
-
-            // Try to list files in the S3 bucket to verify access
-            try {
-                List<Map<String, Object>> listResults = duckDBService.executeQuery(
-                    "SELECT * FROM s3_list_directories('" + s3Path + "')"
-                );
-                System.out.println("[DEBUG_LOG] S3 directories: " + listResults);
-            } catch (SQLException e) {
-                System.out.println("[DEBUG_LOG] Error listing S3 directories: " + e.getMessage());
-                // Continue anyway
-            }
-
-            List<Map<String, Object>> s3Results = partitionedParquetService.queryPartitionedParquetFiles(
-                    TEST_TABLE,
-                    s3Path,
-                    partitionColumns,
-                    "SELECT region, status, COUNT(*) as count FROM " + TEST_TABLE + " GROUP BY region, status"
-            );
-
-            System.out.println("[DEBUG_LOG] S3 query results: " + s3Results);
-            assertFalse(s3Results.isEmpty(), "Query results should not be empty");
-
-            // Verify that we have results for different partitions
-            assertTrue(s3Results.size() > 1, "Should have multiple partitions");
-
-            // Test a more complex query with partition pruning
-            String pruningQuery = "SELECT region, status, AVG(balance) as avg_balance " +
-                    "FROM " + TEST_TABLE + " " +
-                    "WHERE region = 'region_0' " +
-                    "GROUP BY region, status";
-
-            List<Map<String, Object>> pruningResults = partitionedParquetService.queryPartitionedParquetFiles(
-                    TEST_TABLE,
-                    s3Path,
-                    partitionColumns,
-                    pruningQuery
-            );
-
-            System.out.println("[DEBUG_LOG] Pruning query results: " + pruningResults);
-            assertFalse(pruningResults.isEmpty(), "Pruning query results should not be empty");
-
-            // All results should have region = 'region_0'
-            for (Map<String, Object> row : pruningResults) {
-                assertEquals("region_0", row.get("region"), "All results should have region = 'region_0'");
-            }
-
-            System.out.println("[DEBUG_LOG] S3 test completed successfully");
-        } catch (Exception e) {
-            System.out.println("[DEBUG_LOG] S3 test failed, but continuing with test: " + e.getMessage());
-            // Don't fail the test if S3 doesn't work, as the local test is more important
-        }
+        List<Map<String, Object>> pruned = partitionedParquetService.queryPartitionedParquetFiles(VIEW, s3Path,
+                "SELECT region, status, balance FROM " + VIEW + " WHERE region = 'region_0'");
+        assertThat(pruned).singleElement().satisfies(row -> {
+            assertThat(row).containsEntry("region", "region_0").containsEntry("status", "status_0");
+            assertThat(row.get("balance")).isEqualTo(0.5);
+        });
     }
 
     @Test
-    void testCustomRecordGenerator() throws IOException, SQLException {
-        // Create Avro schema
-        String schemaJson = "{\n" +
-                "  \"type\": \"record\",\n" +
-                "  \"name\": \"Product\",\n" +
-                "  \"fields\": [\n" +
-                "    {\"name\": \"id\", \"type\": \"int\"},\n" +
-                "    {\"name\": \"name\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"category\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"department\", \"type\": \"string\"},\n" +
-                "    {\"name\": \"price\", \"type\": \"double\"}\n" +
-                "  ]\n" +
-                "}";
+    void testCustomRecordGeneratorAndPartitionPruning() throws IOException, SQLException {
+        Schema schema = partitionedParquetService.createSchema(PRODUCT_SCHEMA);
+        String outputDir = tempDir.resolve("products").toString();
 
-        Schema schema = partitionedParquetService.createSchema(schemaJson);
-        System.out.println("[DEBUG_LOG] Created schema: " + schema.getName());
-
-        // Define partition columns
-        List<String> partitionColumns = Arrays.asList("category", "department");
-
-        // Create custom record generator
-        String outputDir = tempDir.resolve("custom-parquet-data").toString();
-        Map<String, List<String>> partitionFiles = partitionedParquetService.createPartitionedParquetFiles(
-                schema,
-                partitionColumns,
-                50, // 50 records
-                outputDir,
+        partitionedParquetService.createPartitionedParquetFiles(schema, List.of("category", "department"), 60, outputDir,
                 index -> {
-                    GenericRecord record = new org.apache.avro.generic.GenericData.Record(schema);
+                    GenericRecord record = new GenericData.Record(schema);
                     record.put("id", index);
                     record.put("name", "Product " + index);
-
-                    // Create specific partition values to test partition pruning
-                    String category = "category_" + (index % 5); // 5 categories
-                    String department = "department_" + (index % 3); // 3 departments
-
-                    record.put("category", category);
-                    record.put("department", department);
+                    record.put("category", "category_" + (index % 5));
+                    record.put("department", "department_" + (index % 3));
                     record.put("price", 10.0 + index);
                     return record;
-                }
-        );
+                });
 
-        System.out.println("[DEBUG_LOG] Created custom partitioned Parquet files in: " + outputDir);
-        System.out.println("[DEBUG_LOG] Custom partitions: " + partitionFiles.keySet());
+        // 5 categories x 3 departments = 15 partitions, 4 records each
+        List<Map<String, Object>> all = partitionedParquetService.queryPartitionedParquetFiles(VIEW, outputDir,
+                "SELECT category, department, COUNT(*) AS count FROM " + VIEW
+                        + " GROUP BY category, department ORDER BY category, department");
+        assertThat(all).hasSize(15).allSatisfy(row -> assertThat(row.get("count")).isEqualTo(4L));
 
-        // Test local query
-        List<Map<String, Object>> localResults = partitionedParquetService.queryLocalPartitionedParquetFiles(
-                TEST_TABLE,
-                outputDir,
-                partitionColumns,
-                "SELECT category, department, COUNT(*) as count, AVG(price) as avg_price " +
-                        "FROM " + TEST_TABLE + " " +
-                        "GROUP BY category, department " +
-                        "ORDER BY category, department"
-        );
+        List<Map<String, Object>> pruned = partitionedParquetService.queryPartitionedParquetFiles(VIEW, outputDir,
+                "SELECT category, department, COUNT(*) AS count FROM " + VIEW
+                        + " WHERE category = 'category_1' GROUP BY category, department");
+        assertThat(pruned).hasSize(3).allSatisfy(row -> assertThat(row).containsEntry("category", "category_1"));
 
-        System.out.println("[DEBUG_LOG] Custom local query results: " + localResults);
-        assertFalse(localResults.isEmpty(), "Query results should not be empty");
-
-        // Should have 5 categories * 3 departments = 15 partitions
-        assertEquals(15, localResults.size(), "Should have 15 partitions (5 categories * 3 departments)");
-
-        // Test partition pruning
-        List<Map<String, Object>> pruningResults = partitionedParquetService.queryLocalPartitionedParquetFiles(
-                TEST_TABLE,
-                outputDir,
-                partitionColumns,
-                "SELECT category, department, COUNT(*) as count " +
-                        "FROM " + TEST_TABLE + " " +
-                        "WHERE category = 'category_1' " +
-                        "GROUP BY category, department"
-        );
-
-        System.out.println("[DEBUG_LOG] Custom pruning query results: " + pruningResults);
-        assertFalse(pruningResults.isEmpty(), "Pruning query results should not be empty");
-
-        // Should have 3 results (1 category * 3 departments)
-        assertEquals(3, pruningResults.size(), "Should have 3 results (1 category * 3 departments)");
-
-        // All results should have category = 'category_1'
-        for (Map<String, Object> row : pruningResults) {
-            assertEquals("category_1", row.get("category"), "All results should have category = 'category_1'");
-        }
+        // The filter on the partition column is pushed into the file scan, so only category_1 files are read
+        String plan = partitionedParquetService.queryPartitionedParquetFiles(VIEW, outputDir,
+                        "EXPLAIN ANALYZE SELECT count(*) FROM " + VIEW + " WHERE category = 'category_1'")
+                .getFirst().values().stream().map(String::valueOf).reduce("", String::concat);
+        assertThat(plan).contains("Scanning Files: 3/15");
     }
 }
